[workspace]
members = [
    "core",
    "stroke",
    "render_graph",
    "resource_cache",
    "renderers/tess",
    "renderers/stencil",
    "renderers/tiling",
    "renderers/rectangles",
    "renderers/wpf",
    "renderers/msaa_stroke",
    "renderers/template",
    "patterns/color",
    "patterns/gradients",
    "patterns/checkerboard",
    "patterns/texture",
    "testing/utils",
    "testing/core_test",
    "document",
    "demo", "testing/core_test",
]


resolver = "2"

# Uncomment this when profiling.
[profile.release]
debug = true
