[workspace]
members = [
    "core",
    "stroke",
    "render_graph",
    "resource_cache",
    "renderers/tess",
    "renderers/stencil",
    "renderers/tiling",
    "renderers/rectangles",
    "renderers/wpf",
    "renderers/msaa_stroke",
    "renderers/template",
    "renderers/vger",
    "renderers/bands",
    "patterns/color",
    "patterns/gradients",
    "patterns/checkerboard",
    "patterns/texture",
    "patterns/corner",
    "testing/utils",
    "testing/core_test",
    "document",
    "demo",
    "renderers/slug",
]


resolver = "2"

# Uncomment this when profiling.
[profile.release]
debug = true
