[package]
name = "tiling"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
lyon = "0.17"
wgpu = "0.12"
winit = "0.26"
futures = "0.3.5"
bytemuck = "1.2.0"
svg_fmt = "0.4.1"
usvg = "0.4"
time = "0.1.42"
ordered-float = "1.0.2"
rayon = "1.5"
crossbeam-channel = "0.5"
profiling = "1.0.4"
copyless = "0.1.5"
parasol = { path = "../parasol" }

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[profile.release]
debug=true

[features]
tracy_profiling = ["profiling/profile-with-tracy", "parasol/tracy"]
