[package]
name = "core"
version = "0.1.0"
edition = "2024"
resolver = "2"
workspace = ".."

[dependencies]
lyon = { version = "1.0.0" }
wgpu = { version = "26" }
etagere = { version = "0.2.13" }
guillotiere = { version = "0.6.2" }
futures = "0.3.5"
bytemuck = "1.2.0"
svg_fmt = "0.4.1"
profiling = "1.0.4"
bitflags = "2.3.3"
smallvec = "1.11.2"
rayon = "1.10.0"
wgpu-profiler = "0.24.0"
allocator-api2 = "0.3.0"

[profile.release]
debug=true

[features]
tracy_profiling = ["profiling/profile-with-tracy"]
poison_frame_memory = []
