[package]
name = "demo"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
workspace = "../"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }

tess = { path = "../renderers/tess" }
#tiling = { path = "../renderers/tiling" }
tiling2 = { path = "../renderers/tiling2" }
stencil = { path = "../renderers/stencil" }
rectangles = { path = "../renderers/rectangles" }
msaa_stroke = { path = "../renderers/msaa_stroke" }
wpf = { path = "../renderers/wpf" }
#debug_overlay = { path = "/home/nical/dev/rust/rust_debug/font/overlay", features = ["wgpu"] }
debug_overlay = { version = "0.9", features = ["wgpu"] }

pattern_color = { path = "../patterns/color" }
pattern_linear_gradient = { path = "../patterns/linear_gradient" }
pattern_checkerboard = { path = "../patterns/checkerboard" }
pattern_texture = { path = "../patterns/texture" }

lyon = "1.0.0"
winit = "0.30"
wgpu = { version = "25.0", features = ["counters"] }
usvg = "0.36"
profiling = "1.0.4"
futures = "0.3.5"
color-backtrace = { version = "0.6.1" }

[features]
tracy_profiling = ["core/tracy_profiling"]
#trace = ["core/trace"]
