[package]
name = "demo"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
workspace = "../"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }

tiling = { path = "../renderers/tiling" }
tess = { path = "../renderers/tess", optional = true }
stencil = { path = "../renderers/stencil", optional = true }
rectangles = { path = "../renderers/rectangles", optional = true }
msaa_stroke = { path = "../renderers/msaa_stroke", optional = true }
wpf = { path = "../renderers/wpf", optional = true }
#debug_overlay = { path = "/home/nical/dev/rust/rust_debug/font/overlay", features = ["wgpu"] }
debug_overlay = { version = "0.10.0", features = ["wgpu"] }

pattern_color = { path = "../patterns/color" }
pattern_gradients = { path = "../patterns/gradients" }
pattern_checkerboard = { path = "../patterns/checkerboard" }
pattern_texture = { path = "../patterns/texture" }

lyon = "1.0.0"
winit = "0.30"
wgpu = { version = "26.0", features = ["counters"] }
usvg = "0.36"
profiling = "1.0.4"
futures = "0.3.5"
color-backtrace = { version = "0.6.1" }
env_logger = "0.11"

[features]
tracy_profiling = ["core/tracy_profiling"]
#trace = ["core/trace"]
