[package]
name = "tiling"
version = "0.1.0"
edition = "2021"
resolver = "2"
workspace = ".."

[dependencies]
core = { path = "../core" }
pattern_texture = { path = "../patterns/texture" }
lyon = "1.0.0"
profiling = "1.0.4"
copyless = "0.1.5"
ordered-float = "1.0.2"
time = "0.1.42"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]
